// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuView Arrow does not render if arrow prop is not provided 1`] = `
<MenuView>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView>
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow does not render if placement is not supported 1`] = `
<MenuView
  arrow={true}
  placement="right-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf bWtXTI"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 1`] = `
<MenuView
  arrow={true}
  placement="left"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="left"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf fSYTsS"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="left"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--left c-arrow c-arrow--r fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 2`] = `
<MenuView
  arrow={true}
  placement="top"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf eRuDOe"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow c-arrow--b fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 3`] = `
<MenuView
  arrow={true}
  placement="top-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf eRuDOe"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow c-arrow--bl fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 4`] = `
<MenuView
  arrow={true}
  placement="top-end"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="top-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf eRuDOe"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="top-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow c-arrow--br fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 5`] = `
<MenuView
  arrow={true}
  placement="right"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf cmAXZG"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right c-arrow c-arrow--l fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 6`] = `
<MenuView
  arrow={true}
  placement="bottom"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf ctOreY"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow c-arrow--t fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 7`] = `
<MenuView
  arrow={true}
  placement="bottom-start"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf ctOreY"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow c-arrow--tl fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow placement renders correct arrow placement if provided 8`] = `
<MenuView
  arrow={true}
  placement="bottom-end"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="bottom-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf ctOreY"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="bottom-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow c-arrow--tr fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Arrow renders otherwise 1`] = `
<MenuView
  arrow={true}
  placement="right"
>
  <MenuView__MenuWrapper
    arrow={true}
    placement="right"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf cmAXZG"
    >
      <MenuView__StyledMenuView
        arrow={true}
        placement="right"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right c-arrow c-arrow--l fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 1`] = `
<MenuView
  placement="bottom"
>
  <MenuView__MenuWrapper
    placement="bottom"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf hZHudz"
    >
      <MenuView__StyledMenuView
        placement="bottom"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow--t fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 2`] = `
<MenuView
  placement="bottom-start"
>
  <MenuView__MenuWrapper
    placement="bottom-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf hZHudz"
    >
      <MenuView__StyledMenuView
        placement="bottom-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow--tl fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders down styling if placement is provided 3`] = `
<MenuView
  placement="bottom-end"
>
  <MenuView__MenuWrapper
    placement="bottom-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf hZHudz"
    >
      <MenuView__StyledMenuView
        placement="bottom-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--down c-arrow--tr fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 1`] = `
<MenuView
  placement="left"
>
  <MenuView__MenuWrapper
    placement="left"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf idxOfc"
    >
      <MenuView__StyledMenuView
        placement="left"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--left c-arrow--r fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 2`] = `
<MenuView
  placement="left-start"
>
  <MenuView__MenuWrapper
    placement="left-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf idxOfc"
    >
      <MenuView__StyledMenuView
        placement="left-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--left fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders left styling if placement is provided 3`] = `
<MenuView
  placement="left-end"
>
  <MenuView__MenuWrapper
    placement="left-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf idxOfc"
    >
      <MenuView__StyledMenuView
        placement="left-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--left fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 1`] = `
<MenuView
  placement="right"
>
  <MenuView__MenuWrapper
    placement="right"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf bWtXTI"
    >
      <MenuView__StyledMenuView
        placement="right"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right c-arrow--l fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 2`] = `
<MenuView
  placement="right-start"
>
  <MenuView__MenuWrapper
    placement="right-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf bWtXTI"
    >
      <MenuView__StyledMenuView
        placement="right-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders right styling if placement is provided 3`] = `
<MenuView
  placement="right-end"
>
  <MenuView__MenuWrapper
    placement="right-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf bWtXTI"
    >
      <MenuView__StyledMenuView
        placement="right-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--right fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 1`] = `
<MenuView
  placement="top"
>
  <MenuView__MenuWrapper
    placement="top"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf kOanVq"
    >
      <MenuView__StyledMenuView
        placement="top"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow--b fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 2`] = `
<MenuView
  placement="top-start"
>
  <MenuView__MenuWrapper
    placement="top-start"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf kOanVq"
    >
      <MenuView__StyledMenuView
        placement="top-start"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow--bl fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Directional styling renders up styling if placement is provided 3`] = `
<MenuView
  placement="top-end"
>
  <MenuView__MenuWrapper
    placement="top-end"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf kOanVq"
    >
      <MenuView__StyledMenuView
        placement="top-end"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up c-arrow--br fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders animation styling correctly 1`] = `
<MenuView
  animate={true}
>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView
        animate={true}
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu is-open fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders custom left animation correctly 1`] = `
<MenuView
  animate={true}
  placement="left"
>
  <MenuView__MenuWrapper
    placement="left"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf idxOfc"
    >
      <MenuView__StyledMenuView
        animate={true}
        placement="left"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--left is-open c-arrow--r emxQFi"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView Renders renders custom top animation correctly 1`] = `
<MenuView
  animate={true}
  placement="top"
>
  <MenuView__MenuWrapper
    placement="top"
  >
    <div
      className="MenuView__MenuWrapper-gKLuJf kOanVq"
    >
      <MenuView__StyledMenuView
        animate={true}
        placement="top"
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--up is-open c-arrow--b beaczg"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders RTL styling correctly 1`] = `
<MenuView>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView>
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders default styling correctly 1`] = `
<MenuView>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView>
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders hidden styling if provided 1`] = `
<MenuView
  hidden={true}
>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView
        hidden={true}
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu is-hidden fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
          hidden={true}
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;

exports[`MenuView renders small styling correctly 1`] = `
<MenuView
  small={true}
>
  <MenuView__MenuWrapper>
    <div
      className="MenuView__MenuWrapper-gKLuJf iQPnQE"
    >
      <MenuView__StyledMenuView
        small={true}
      >
        <ul
          className="MenuView__StyledMenuView-kxrVPe c-menu c-menu--sm fDjDUm"
          data-garden-id="menus.menu_view"
          data-garden-version="version"
        />
      </MenuView__StyledMenuView>
    </div>
  </MenuView__MenuWrapper>
</MenuView>
`;
